<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D2D180"
    tools:context=".MainActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/etNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Nama"
        android:text=" "
        android:layout_marginTop="30dp"
        android:inputType="text"  />



    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvTipee"
        android:text="@string/TipePelanggan"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/btnRadiogroupp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btnGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/Gold"
            android:background="#F9F07A"/>

        <RadioButton
            android:id="@+id/btnSilver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/Silver"
            android:background="#B5C0D0"/>

        <RadioButton
            android:id="@+id/btnBiasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/Biasa"
            android:background="#C7C8CC"/>


    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/etKodebarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=" "
        android:hint="@string/KodeBaranA"
        android:layout_marginTop="30dp"
        android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etJumlahbarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=" "
        android:hint="@string/JumlahBarangA"
        android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnProses"
        android:layout_width="207dp"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Proses" />

</LinearLayout>